# python-tutorial

./: .gitignore  LICENSE  LICENSE.playground  PUBLISHING.md  README.md  capture_tui_screenshots.py  generate_banner.py  generate_real_screenshots.py  pyproject.toml  submission-post.md
.github/workflows/: publish.yml
project-submissions/: README.md  generate_screenshots.sh
project-submissions/api-framework/: README.md
project-submissions/api-framework/assets/: screenshot-1.txt
project-submissions/api-framework/solution/: app.py  middleware.py  request.py  response.py  router.py
project-submissions/api-framework/starter/: app.py  middleware.py  request.py  response.py  router.py
project-submissions/chat-server/: README.md
project-submissions/chat-server/assets/: screenshot-1.txt
project-submissions/chat-server/solution/: auth.py  client.py  commands.py  protocol.py  server.py
project-submissions/chat-server/starter/: auth.py  client.py  commands.py  protocol.py  server.py
project-submissions/expense-tracker/: README.md
project-submissions/expense-tracker/assets/: screenshot-1.txt
project-submissions/expense-tracker/solution/: analysis.py  database.py  expenses.db  importers.py  models.py  reports.py  requirements.txt  tracker.py
project-submissions/expense-tracker/starter/: analysis.py  database.py  importers.py  models.py  reports.py  tracker.py
project-submissions/markdown-blog/: README.md
project-submissions/markdown-blog/assets/: screenshot-1.txt
project-submissions/markdown-blog/solution/: build.py  parser.py  renderer.py  serve.py
project-submissions/markdown-blog/starter/: build.py  parser.py  renderer.py  serve.py
project-submissions/pixel-editor/: README.md
project-submissions/pixel-editor/assets/: screenshot-1.txt
project-submissions/pixel-editor/solution/: canvas.py  editor.py  export.py  filters.py  layers.py  render.py  tools.py
project-submissions/pixel-editor/starter/: canvas.py  editor.py  export.py  filters.py  layers.py  render.py  tools.py
project-submissions/task-scheduler/: README.md
project-submissions/task-scheduler/assets/: screenshot-1.txt
project-submissions/task-scheduler/solution/: executor.py  scheduler.py  storage.py  tasks.py  triggers.py
project-submissions/task-scheduler/starter/: executor.py  scheduler.py  storage.py  tasks.py  triggers.py
project-submissions/tui-text-editor/: README.md
project-submissions/tui-text-editor/solution/: buffer.py  editor.py  files.py  screen.py  syntax.py
project-submissions/tui-text-editor/starter/: buffer.py  editor.py  files.py  screen.py  syntax.py
python_tutorial/: challenges.py  cli.py  content.py  explainer.py  flashcards.py  models.py  progress.py  quiz.py  renderer.py  sandbox.py  session.py  themes.py  tutor.py
python_tutorial/content/Phase 1 - Fundamentals/: 1. Programming Basics.md  10. Files.md  11. Projects.md  2. Variables and Data Types.md  3. Operators.md  4. Input and Output.md  5. Strings.md  6. Functions.md  7. Collections.md  8. Control Flow.md  9. Comprehensions.md
python_tutorial/content/Phase 2 - Core Python/: 1. Error Handling.md  2. Modules.md  3. Packages.md  4. Virtual Environments.md  5. JSON.md  6. Pathlib.md  7. Logging.md  8. Projects.md
python_tutorial/content/Phase 3 - OOP/: 1. Classes and Objects.md  2. Constructors.md  (+6 more)
python_tutorial/playground/: README.md  tokyo-night-theme.json
python_tutorial/projects/: __init__.py  api_framework.py  chat_server.py  expense_tracker.py  markdown_blog.py  pixel_editor.py  task_scheduler.py  tui_text_editor.py
python_tutorial/tui/: app.py  code_panel.py  content_panel.py  screens.py  sidebar.py  status_bar.py  themes.py
tests/: conftest.py  test_content.py  test_progress.py  test_sandbox.py
(+61 files in other folders)
