[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytut"
version = "2.0.0"
description = "Interactive CLI-based Python tutorial with quizzes and progress tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Manas-thakur"}
]
repository = {url = "https://github.com/Manas-thakur/python-tutorial"}
homepage = "https://github.com/Manas-thakur/python-tutorial"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "pygments>=2.15.0",
]
keywords = ["python", "tutorial", "cli", "learning", "interactive"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
python-tutorial = "python_tutorial.tui.app:main"
pytut = "python_tutorial.tui.app:main"
pytut-cli = "python_tutorial.cli:app"

[project.urls]
"Bug Tracker" = "https://github.com/Manas-thakur/python-tutorial/issues"
"Source" = "https://github.com/Manas-thakur/python-tutorial"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["python_tutorial"]

[tool.hatch.build.targets.wheel.force-include]
"python_tutorial/playground/playground" = "python_tutorial/playground/playground"
"python_tutorial/playground/playground.exe" = "python_tutorial/playground/playground.exe"
"python_tutorial/playground/playground-x86_64-apple-darwin" = "python_tutorial/playground/playground-x86_64-apple-darwin"
"python_tutorial/playground/playground-aarch64-apple-darwin" = "python_tutorial/playground/playground-aarch64-apple-darwin"
"python_tutorial/playground/README.md" = "python_tutorial/playground/README.md"

[tool.hatch.build.targets.sdist]
include = ["python_tutorial/**"]
